--- a/src/main/resources/templates/pages/master/gedung/delete.html
+++ b/src/main/resources/templates/pages/master/gedung/delete.html
@@ -1,7 +1,6 @@
 <form xmlns:th="http://www.thymeleaf.org" th:id="form-gedung" th:action="@{~/master/gedung/remove}"
       th:method="post" th:object="${gedung}">
     <input type="hidden" name="id" th:value="${gedung.id}">
-    <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel4">Delete Gedung</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -9,14 +8,14 @@
         <div class="modal-body">
             <div class="row">
                 <div class="col mb-3">
-                    <label for="kode" class="form-label">Kode</label>
-                    <input type="text" id="kode" name="kode" th:value="${gedung.kode}" class="form-control" readonly />
+                    <label for="code" class="form-label">Kode</label>
+                    <input type="text" id="code" name="code" th:value="${gedung.code}" class="form-control" readonly />
                 </div>
             </div>
             <div class="row">
                 <div class="col mb-3">
-                    <label for="nama" class="form-label">Nama</label>
-                    <input type="text" id="nama" name="nama" th:value="${gedung.nama}" class="form-control" readonly />
+                    <label for="name" class="form-label">Nama</label>
+                    <input type="text" id="name" name="name" th:value="${gedung.name}" class="form-control" readonly />
                 </div>
             </div>
         </div>
@@ -26,5 +25,4 @@
                 Close
             </button>
         </div>
-    </div>
 </form>
