feat : update student

--- a/src/main/resources/templates/pages/master/lookup/delete.html
+++ b/src/main/resources/templates/pages/master/lookup/delete.html
@@ -13,18 +13,18 @@
                 <input type="text" id="group" name="group" th:value="${lookup.group}" class="form-control" readonly>
                 </div>
                 <div class="col mb-0">
-                    <label for="kode" class="form-label">Kode</label>
-                    <input type="text" id="kode" name="kode" th:value="${lookup.kode}" class="form-control" readonly/>
+                    <label for="code" class="form-label">code</label>
+                    <input type="text" id="code" name="code" th:value="${lookup.code}" class="form-control" readonly/>
                 </div>
             </div>
             <div class="row">
                 <div class="col mb-0">
-                    <label for="nama" class="form-label">Nama</label>
-                    <input type="text" id="nama" name="nama" th:value="${lookup.nama}" class="form-control" readonly/>
+                    <label for="name" class="form-label">name</label>
+                    <input type="text" id="name" name="name" th:value="${lookup.name}" class="form-control" readonly/>
                 </div>
                 <div class="col mb-0">
-                    <label for="urutan" class="form-label">Urutan</label>
-                    <input type="text" id="urutan" name="urutan" th:value="${lookup.urutan}" class="form-control" readonly>
+                    <label for="position" class="form-label">position</label>
+                    <input type="text" id="position" name="position" th:value="${lookup.position}" class="form-control" readonly>
                 </div>
             </div>
         </div>
