--- a/src/main/resources/templates/pages/master/ruangan/add.html
+++ b/src/main/resources/templates/pages/master/ruangan/add.html
@@ -1,6 +1,5 @@
 <form xmlns:th="http://www.thymeleaf.org" th:id="form-ruangan" th:action="@{~/master/ruangan/save}"
       th:method="post" th:object="${ruangan}">
-    <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel4">Tambah Ruangan</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -13,39 +12,39 @@
 <!--            </div>-->
             <div class="row g-2">
                 <div class="col mb-0">
-                    <label for="gedungId" class="form-label">Gedung</label>
-                    <select id="gedungId" name="gedungId" th:value="${ruangan.gedungId}" data-allow-clear="true"
-                            th:class="${#fields.hasErrors('gedungId')}? 'form-select select2 is-invalid': 'form-select select2'">
+                    <label for="buildingId" class="form-label">Gedung</label>
+                    <select id="buildingId" name="buildingId" th:value="${ruangan.buildingId}" data-allow-clear="true"
+                            th:class="${#fields.hasErrors('buildingId')}? 'form-select select2 is-invalid': 'form-select select2'">
                         <option value="">Pilih Gedung</option>
-                        <option th:each="item : ${dataGedung}" th:value="${item.id}" th:text="${item.kode}"
-                                th:selected="${item.id == ruangan.gedungId}"></option>
+                        <option th:each="item : ${dataGedung}" th:value="${item.id}" th:text="${item.code}"
+                                th:selected="${item.id == ruangan.buildingId}"></option>
                     </select>
-                    <div th:if="${#fields.hasErrors('gedungId')}" class="invalid-feedback">
-                        <span th:errors="*{gedungId}"></span>
+                    <div th:if="${#fields.hasErrors('buildingId')}" class="invalid-feedback">
+                        <span th:errors="*{buildingId}"></span>
                     </div>
                 </div>
                 <div class="col mb-0">
-                    <label for="kode" class="form-label">Kode</label>
-                    <input type="text" id="kode" name="kode" th:value="${ruangan.kode}" th:class="${#fields.hasErrors('kode')}? 'form-control is-invalid': 'form-control'" placeholder="Kode" />
-                    <div th:if="${#fields.hasErrors('kode')}" class="invalid-feedback">
-                        <span th:errors="*{kode}"></span>
+                    <label for="code" class="form-label">Kode</label>
+                    <input type="text" id="code" name="code" th:value="${ruangan.code}" th:class="${#fields.hasErrors('code')}? 'form-control is-invalid': 'form-control'" placeholder="Kode" />
+                    <div th:if="${#fields.hasErrors('code')}" class="invalid-feedback">
+                        <span th:errors="*{code}"></span>
                     </div>
                 </div>
             </div>
 
             <div class="row g-2">
                 <div class="col mb-0">
-                    <label for="nama" class="form-label">Nama</label>
-                    <input type="text" id="nama" name="nama" th:value="${ruangan.nama}" th:class="${#fields.hasErrors('nama')}? 'form-control is-invalid': 'form-control'" placeholder="Nama" />
-                    <div th:if="${#fields.hasErrors('nama')}" class="invalid-feedback">
-                        <span th:errors="*{nama}"></span>
+                    <label for="name" class="form-label">Nama</label>
+                    <input type="text" id="name" name="name" th:value="${ruangan.name}" th:class="${#fields.hasErrors('name')}? 'form-control is-invalid': 'form-control'" placeholder="Nama" />
+                    <div th:if="${#fields.hasErrors('name')}" class="invalid-feedback">
+                        <span th:errors="*{name}"></span>
                     </div>
                 </div>
                 <div class="col mb-0">
-                    <label for="kapasitas" class="form-label">Kapasitas</label>
-                    <input type="text" id="kapasitas" name="kapasitas" th:value="${ruangan.kapasitas}" th:class="${#fields.hasErrors('kapasitas')}? 'form-control is-invalid': 'form-control'" placeholder="kapasitas" />
-                    <div th:if="${#fields.hasErrors('kapasitas')}" th:class="invalid-feedback">
-                        <span th:errors="*{kapasitas}"></span>
+                    <label for="capacity" class="form-label">Kapasitas</label>
+                    <input type="text" id="capacity" name="capacity" th:value="${ruangan.capacity}" th:class="${#fields.hasErrors('capacity')}? 'form-control is-invalid': 'form-control'" placeholder="capacity" />
+                    <div th:if="${#fields.hasErrors('capacity')}" th:class="invalid-feedback">
+                        <span th:errors="*{capacity}"></span>
                     </div>
                 </div>
             </div>
@@ -59,5 +58,4 @@
                 Close
             </button>
         </div>
-    </div>
 </form>
