feat: fixing mapel

--- a/src/main/resources/templates/pages/master/mapel/index.html
+++ b/src/main/resources/templates/pages/master/mapel/index.html
@@ -42,6 +42,7 @@
                         <th>No</th>
                         <th>Kode</th>
                         <th>Nama</th>
+                        <th>Types</th>
                         <th>Status</th>
                         <th class="cell-fit">Actions</th>
                     </tr>
