--- a/src/main/resources/templates/pages/master/mapel/delete.html
+++ b/src/main/resources/templates/pages/master/mapel/delete.html
@@ -1,7 +1,6 @@
-<form xmlns:th="http://www.thymeleaf.org" th:id="form-level" th:action="@{~/master/mapel/remove}"
+<form xmlns:th="http://www.thymeleaf.org" th:id="form-mapel" th:action="@{~/master/mapel/remove}"
       th:method="post" th:object="${mapel}">
     <input type="hidden" name="id" th:value="${mapel.id}">
-    <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel4">Delete Mata Pelajaran</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -9,14 +8,20 @@
         <div class="modal-body">
             <div class="row">
                 <div class="col mb-3">
-                    <label for="kode" class="form-label">Kode</label>
-                    <input type="text" id="kode" name="kode" th:value="${mapel.kode}" class="form-control" readonly />
+                    <label for="code" class="form-label">Kode</label>
+                    <input type="text" id="code" name="code" th:value="${mapel.code}" class="form-control" readonly />
                 </div>
             </div>
             <div class="row">
                 <div class="col mb-3">
-                    <label for="nama" class="form-label">Nama</label>
-                    <input type="text" id="nama" name="nama" th:value="${mapel.nama}" class="form-control" readonly />
+                    <label for="name" class="form-label">Nama</label>
+                    <input type="text" id="name" name="name" th:value="${mapel.name}" class="form-control" readonly />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col mb-3">
+                    <label for="types" class="form-label">Types</label>
+                    <input type="text" id="types" name="types" th:value="${mapel.types}" class="form-control" readonly />
                 </div>
             </div>
         </div>
@@ -26,5 +31,4 @@
                 Close
             </button>
         </div>
-    </div>
 </form>
