--- a/src/main/resources/templates/pages/master/kurikulum/add.html
+++ b/src/main/resources/templates/pages/master/kurikulum/add.html
@@ -1,6 +1,5 @@
 <form xmlns:th="http://www.thymeleaf.org" th:id="form-kurikulum" th:action="@{~/master/kurikulum/save}"
       th:method="post" th:object="${kurikulum}">
-  <div class="modal-content">
     <div class="modal-header">
       <h5 class="modal-title" id="exampleModalLabel4">Tambah Kurikulum</h5>
       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -13,28 +12,28 @@
 <!--      </div>-->
       <div class="row">
         <div class="col mb-3">
-          <label for="kode" class="form-label">Kode</label>
-          <input type="text" id="kode" name="kode" th:value="${kurikulum.kode}" th:class="${#fields.hasErrors('kode')}? 'form-control is-invalid': 'form-control'" placeholder="Kode" />
-          <div th:if="${#fields.hasErrors('kode')}" class="invalid-feedback">
-            <span th:errors="*{kode}"></span>
+          <label for="code" class="form-label">Kode</label>
+          <input type="text" id="code" name="code" th:value="${kurikulum.code}" th:class="${#fields.hasErrors('code')}? 'form-control is-invalid': 'form-control'" placeholder="Kode" />
+          <div th:if="${#fields.hasErrors('code')}" class="invalid-feedback">
+            <span th:errors="*{code}"></span>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col mb-3">
-          <label for="nama" class="form-label">Nama</label>
-          <input type="text" id="nama" name="nama" th:value="${kurikulum.nama}" th:class="${#fields.hasErrors('nama')}? 'form-control is-invalid': 'form-control'" placeholder="Nama" />
-          <div th:if="${#fields.hasErrors('nama')}" class="invalid-feedback">
-            <span th:errors="*{nama}"></span>
+          <label for="name" class="form-label">Nama</label>
+          <input type="text" id="name" name="name" th:value="${kurikulum.name}" th:class="${#fields.hasErrors('name')}? 'form-control is-invalid': 'form-control'" placeholder="Nama" />
+          <div th:if="${#fields.hasErrors('name')}" class="invalid-feedback">
+            <span th:errors="*{name}"></span>
           </div>
         </div>
       </div>
         <div class="row">
             <div class="col mb-3">
-                <label for="noUrut" class="form-label">No Urut</label>
-                <input type="text" id="noUrut" name="noUrut" th:value="${kurikulum.noUrut}" th:class="${#fields.hasErrors('noUrut')}? 'form-control is-invalid': 'form-control'" placeholder="No Urut" />
-                <div th:if="${#fields.hasErrors('noUrut')}" class="invalid-feedback">
-                    <span th:errors="*{noUrut}"></span>
+                <label for="position" class="form-label">No Urut</label>
+                <input type="text" id="position" name="position" th:value="${kurikulum.position}" th:class="${#fields.hasErrors('position')}? 'form-control is-invalid': 'form-control'" placeholder="No Urut" />
+                <div th:if="${#fields.hasErrors('position')}" class="invalid-feedback">
+                    <span th:errors="*{position}"></span>
                 </div>
             </div>
         </div>
@@ -49,5 +48,4 @@
         Close
       </button>
     </div>
-  </div>
 </form>
