--- a/src/main/resources/templates/pages/master/kurikulum/delete.html
+++ b/src/main/resources/templates/pages/master/kurikulum/delete.html
@@ -1,7 +1,6 @@
 <form xmlns:th="http://www.thymeleaf.org" th:id="form-kurikulum" th:action="@{~/master/kurikulum/remove}"
       th:method="post" th:object="${kurikulum}">
   <input type="hidden" name="id" th:value="${kurikulum.id}">
-  <div class="modal-content">
     <div class="modal-header">
       <h5 class="modal-title" id="exampleModalLabel4">Delete Kurikulum</h5>
       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -9,20 +8,20 @@
     <div class="modal-body">
       <div class="row">
         <div class="col mb-3">
-          <label for="kode" class="form-label">Kode</label>
-          <input type="text" id="kode" name="kode" th:value="${kurikulum.kode}" class="form-control" readonly />
+          <label for="code" class="form-label">Kode</label>
+          <input type="text" id="code" name="code" th:value="${kurikulum.code}" class="form-control" readonly />
         </div>
       </div>
       <div class="row">
         <div class="col mb-3">
-          <label for="nama" class="form-label">Nama</label>
-          <input type="text" id="nama" name="nama" th:value="${kurikulum.nama}" class="form-control" readonly />
+          <label for="name" class="form-label">Nama</label>
+          <input type="text" id="name" name="name" th:value="${kurikulum.name}" class="form-control" readonly />
         </div>
       </div>
       <div class="row">
         <div class="col mb-3">
-          <label for="noUrut" class="form-label">No Urut</label>
-          <input type="text" id="noUrut" name="noUrut" th:value="${kurikulum.noUrut}" class="form-control" readonly />
+          <label for="position" class="form-label">No Urut</label>
+          <input type="text" id="position" name="position" th:value="${kurikulum.position}" class="form-control" readonly />
         </div>
       </div>
     </div>
@@ -32,5 +31,4 @@
         Close
       </button>
     </div>
-  </div>
 </form>
