--- a/src/main/resources/templates/pages/master/tahun/index.html
+++ b/src/main/resources/templates/pages/master/tahun/index.html
@@ -33,7 +33,10 @@
                     <tr>
                         <th>No.</th>
                         <th>Nama</th>
-                        <th>KodeKurikulum</th>
+                        <th>Kode Kurikulum</th>
+                        <th>Nama Kurikulum</th>
+                        <th>Tanngal Mulai</th>
+                        <th>Tanggal Akhir</th>
                         <th>Status</th>
                         <th class="cell-fit">Actions</th>
                     </tr>
