feat: update course

--- a/src/main/resources/templates/pages/master/course/edit.html
+++ b/src/main/resources/templates/pages/master/course/edit.html
@@ -1,7 +1,6 @@
 <form xmlns:th="http://www.thymeleaf.org" th:id="form-course" th:action="@{~/master/course/update}"
         th:method="post" th:object="${course}">
     <input type="hidden" name="id" th:value="${course.id}">
-    <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel4">Edit Course</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -12,13 +11,21 @@
 <!--                    <li th:each="err : ${#fields.allErrors()}" th:text="${err}" />-->
 <!--                </ul>-->
 <!--            </div>-->
-            <div class="row g-2">
+            <div class="row g-2 mb-2">
                 <div class="col mb-0">
                     <label for="name" class="form-label">Name</label>
                     <input type="text" id="name" name="name" th:value="${course.name}"
                            th:class="${#fields.hasErrors('name')} ? 'form-control is-invalid' : 'form-control'" placeholder="Name" />
                     <div th:if="${#fields.hasErrors('name')}" class="invalid-feedback">
                         <span th:errors="*{name}"></span>
+                    </div>
+                </div>
+                <div class="col mb-0">
+                    <label for="description" class="form-label">Description</label>
+                    <input type="text" id="description" name="description" th:value="${course.description}"
+                           th:class="${#fields.hasErrors('description')} ? 'form-control is-invalid' : 'form-control'" placeholder="description" />
+                    <div th:if="${#fields.hasErrors('description')}" class="invalid-feedback">
+                        <span th:errors="*{description}"></span>
                     </div>
                 </div>
                 <div class="col mb-0">
@@ -29,6 +36,8 @@
                         <span th:errors="*{shortName}"></span>
                     </div>
                 </div>
+            </div>
+            <div class="row g-2 mb-2">
                 <div class="col mb-0">
                     <label for="shown" class="form-label">Shown</label>
                     <input type="text" id="shown" name="shown" th:value="${course.shown}"
@@ -37,8 +46,6 @@
                         <span th:errors="*{shown}"></span>
                     </div>
                 </div>
-            </div>
-            <div class="row g-2">
                 <div class="col mb-0">
                     <label for="startDate" class="form-label">Start Date</label>
                     <input type="date" id="startDate" name="startDate" th:value="${course.startDate}"
@@ -55,6 +62,8 @@
                         <span th:errors="*{endDate}"></span>
                     </div>
                 </div>
+            </div>
+            <div class="row g-2 mb-2">
                 <div class="col mb-0">
                     <label for="summary" class="form-label">Summary</label>
                     <input type="text" id="summary" name="summary" th:value="${course.summary}"
@@ -64,7 +73,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row g-2">
+            <div class="row g-2 mb-2">
                 <div class="col mb-0">
                     <label for="imageId" class="form-label">Image Id</label>
                     <input type="text" id="imageId" name="imageId" th:value="${course.imageId}"
@@ -90,7 +99,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row g-2">
+            <div class="row g-2 mb-2">
                 <div class="col mb-0">
                     <label for="layout" class="form-label">Layout</label>
                     <input type="text" id="layout" name="layout" th:value="${course.layout}"
@@ -107,26 +116,30 @@
                         <span th:errors="*{completionTracking}"></span>
                     </div>
                 </div>
-                <div class="col mb-0">
-                    <label for="kodeLevel" class="form-label">Kode Level</label>
-                    <input type="text" id="kodeLevel" name="kodeLevel" th:value="${course.kodeLevel}"
-                           th:class="${#fields.hasErrors('kodeLevel')} ? 'form-control is-invalid': 'form-control'" placeholder="Kode Level"/>
-                    <div th:if="${#fields.hasErrors('kodeLevel')}" class="invalid-feedback">
-                        <span th:errors="*{kodeLevel}"></span>
-                    </div>
-                </div>
             </div>
             <div class="row g-2">
                 <div class="col mb-0">
-                    <label for="mapelId" class="form-label">Mapel</label>
-                    <select id="mapelId" name="mapelId" th:value="${course.mapelId}" data-allow-clear="true"
-                            th:class="${#fields.hasErrors('mapelId')} ? 'form-select is-invalid': 'form-select'">
+                    <label for="subjectId" class="form-label">Mapel</label>
+                    <select id="subjectId" name="subjectId" th:value="${course.subjectId}" data-allow-clear="true"
+                            th:class="${#fields.hasErrors('subjectId')} ? 'form-select is-invalid': 'form-select'">
                         <option value="">Pilih Mapel</option>
-                        <option th:each="item : ${dataMapel}" th:value="${item.id}" th:text="${item.nama}"
-                                th:selected="${item.id == course.mapelId}"></option>
+                        <option th:each="item : ${dataMapel}" th:value="${item.id}" th:text="${item.name}"
+                                th:selected="${item.id == course.subjectId}"></option>
                     </select>
-                    <div th:if="${#fields.hasErrors('mapelId')}" class="invalid-feedback">
-                        <span th:errors="*{mapelId}"></span>
+                    <div th:if="${#fields.hasErrors('subjectId')}" class="invalid-feedback">
+                        <span th:errors="*{subjectId}"></span>
+                    </div>
+                </div>
+                <div class="col mb-0">
+                    <label for="levelId" class="form-label">Level</label>
+                    <select id="levelId" name="levelId" th:value="${course.levelId}" data-allow-clear="true"
+                            th:class="${#fields.hasErrors('levelId')} ? 'form-select is-invalid': 'form-select'">
+                        <option value="">Pilih Level</option>
+                        <option th:each="item : ${dataLevel}" th:value="${item.id}" th:text="${item.name}"
+                                th:selected="${item.id == course.levelId}"></option>
+                    </select>
+                    <div th:if="${#fields.hasErrors('levelId')}" class="invalid-feedback">
+                        <span th:errors="*{levelId}"></span>
                     </div>
                 </div>
             </div>
@@ -141,5 +154,4 @@
                 Close
             </button>
         </div>
-    </div>
 </form>
