--- a/src/main/resources/templates/pages/master/course/index.html
+++ b/src/main/resources/templates/pages/master/course/index.html
@@ -31,6 +31,7 @@
                     <tr>
                         <th>No.</th>
                         <th>Name</th>
+                        <th>Description</th>
                         <th>Short Name</th>
                         <th>Shown</th>
                         <th>Start Date</th>
@@ -42,7 +43,7 @@
                         <th>Layout</th>
                         <th>Completion Tracking</th>
                         <th>Mapel</th>
-                        <th>Kode Level</th>
+                        <th>Level</th>
                         <th>Status</th>
                         <th class="cell-fit">Actions</th>
                     </tr>
