--- a/src/main/resources/templates/pages/master/course/add.html
+++ b/src/main/resources/templates/pages/master/course/add.html
@@ -1,18 +1,25 @@
 <form xmlns:th="http://www.thymeleaf.org" th:id="form-course" th:action="@{~/master/course/save}"
         th:method="post" th:object="${course}">
-    <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel4">Tambah Course</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-            <div class="row g-2">
+            <div class="row g-2 mb-2">
                 <div class="col mb-0">
                     <label for="name" class="form-label">Name</label>
                     <input type="text" id="name" name="name" th:value="${course.name}"
                            th:class="${#fields.hasErrors('name')} ? 'form-control is-invalid' : 'form-control'" placeholder="Name" />
                     <div th:if="${#fields.hasErrors('name')}" class="invalid-feedback">
                         <span th:errors="*{name}"></span>
+                    </div>
+                </div>
+                <div class="col mb-0">
+                    <label for="description" class="form-label">Description</label>
+                    <input type="text" id="description" name="description" th:value="${course.description}"
+                           th:class="${#fields.hasErrors('description')} ? 'form-control is-invalid' : 'form-control'" placeholder="description" />
+                    <div th:if="${#fields.hasErrors('description')}" class="invalid-feedback">
+                        <span th:errors="*{description}"></span>
                     </div>
                 </div>
                 <div class="col mb-0">
@@ -23,6 +30,8 @@
                         <span th:errors="*{shortName}"></span>
                     </div>
                 </div>
+            </div>
+            <div class="row g-2 mb-2">
                 <div class="col mb-0">
                     <label for="shown" class="form-label">Shown</label>
                     <input type="text" id="shown" name="shown" th:value="${course.shown}"
@@ -31,8 +40,6 @@
                         <span th:errors="*{shown}"></span>
                     </div>
                 </div>
-            </div>
-            <div class="row g-2">
                 <div class="col mb-0">
                     <label for="startDate" class="form-label">Start Date</label>
                     <input type="date" id="startDate" name="startDate" th:value="${course.startDate}"
@@ -49,6 +56,8 @@
                         <span th:errors="*{endDate}"></span>
                     </div>
                 </div>
+            </div>
+            <div class="row g-2 mb-2">
                 <div class="col mb-0">
                     <label for="summary" class="form-label">Summary</label>
                     <input type="text" id="summary" name="summary" th:value="${course.summary}"
@@ -58,7 +67,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row g-2">
+            <div class="row g-2 mb-2">
                 <div class="col mb-0">
                     <label for="imageId" class="form-label">Image Id</label>
                     <input type="text" id="imageId" name="imageId" th:value="${course.summary}"
@@ -84,7 +93,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row g-2">
+            <div class="row g-2 mb-2">
                 <div class="col mb-0">
                     <label for="layout" class="form-label">Layout</label>
                     <input type="text" id="layout" name="layout" th:value="${course.layout}"
@@ -101,29 +110,33 @@
                         <span th:errors="*{completionTracking}"></span>
                     </div>
                 </div>
-                <div class="col mb-0">
-                    <label for="kodeLevel" class="form-label">Kode Level</label>
-                    <input type="text" id="kodeLevel" name="kodeLevel" th:value="${course.kodeLevel}"
-                           th:class="${#fields.hasErrors('kodeLevel')} ? 'form-control is-invalid': 'form-control'" placeholder="Kode Level"/>
-                    <div th:if="${#fields.hasErrors('kodeLevel')}" class="invalid-feedback">
-                        <span th:errors="*{kodeLevel}"></span>
+            </div>
+                <div class="row g-2 mb-2">
+                    <div class="col mb-0">
+                        <label for="subjectId" class="form-label">Mapel</label>
+                        <select id="subjectId" name="subjectId" th:value="${course.subjectId}" data-allow-clear="true"
+                                th:class="${#fields.hasErrors('subjectId')} ? 'form-select is-invalid': 'form-select'">
+                            <option value="">Pilih Mapel</option>
+                            <option th:each="item : ${dataMapel}" th:value="${item.id}" th:text="${item.name}"
+                                    th:selected="${item.id == course.subjectId}"></option>
+                        </select>
+                        <div th:if="${#fields.hasErrors('subjectId')}" class="invalid-feedback">
+                            <span th:errors="*{subjectId}"></span>
+                        </div>
+                    </div>
+                    <div class="col mb-0">
+                        <label for="levelId" class="form-label">Level</label>
+                        <select id="levelId" name="levelId" th:value="${course.levelId}" data-allow-clear="true"
+                                th:class="${#fields.hasErrors('levelId')} ? 'form-select is-invalid': 'form-select'">
+                            <option value="">Pilih Level</option>
+                            <option th:each="item : ${dataLevel}" th:value="${item.id}" th:text="${item.name}"
+                                    th:selected="${item.id == course.levelId}"></option>
+                        </select>
+                        <div th:if="${#fields.hasErrors('levelId')}" class="invalid-feedback">
+                            <span th:errors="*{levelId}"></span>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row g-2">
-                <div class="col mb-0">
-                    <label for="mapelId" class="form-label">Mapel</label>
-                    <select id="mapelId" name="mapelId" th:value="${course.mapelId}" data-allow-clear="true"
-                            th:class="${#fields.hasErrors('mapelId')} ? 'form-select is-invalid': 'form-select'">
-                        <option value="">Pilih Mapel</option>
-                        <option th:each="item : ${dataMapel}" th:value="${item.id}" th:text="${item.nama}"
-                                th:selected="${item.kode == course.mapelId}"></option>
-                    </select>
-                    <div th:if="${#fields.hasErrors('mapelId')}" class="invalid-feedback">
-                        <span th:errors="*{mapelId}"></span>
-                    </div>
-                </div>
-            </div>
         </div>
         <!-- footer -->
         <div class="modal-footer input-group">
@@ -135,5 +148,4 @@
                 Close
             </button>
         </div>
-    </div>
 </form>
