feat: update modul student and institution

--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -87,6 +87,11 @@
                     </a>
                 </li>
                 <li class="menu-item">
+                    <a th:href="@{~/master/institution}" class="menu-link">
+                        <div data-i18n="Master Institution">Master Institution</div>
+                    </a>
+                </li>
+                <li class="menu-item">
                     <a th:href="@{~/master/jadwal}" class="menu-link">
                         <div data-i18n="Jadwal Pelajaran">Jadwal Pelajaran</div>
                     </a>
