--- a/src/main/resources/templates/pages/master/kelas/edit.html
+++ b/src/main/resources/templates/pages/master/kelas/edit.html
@@ -1,7 +1,6 @@
 <form xmlns:th="http://www.thymeleaf.org" th:id="form-kelas" th:action="@{~/master/kelas/update}"
       th:method="post" th:object="${kelas}">
     <input type="hidden" name="id" th:value="${kelas.id}">
-    <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel4">Edit Kelas</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -14,59 +13,59 @@
 <!--            </div>-->
             <div class="row g-2">
                 <div class="col mb-3">
-                    <label for="kode" class="form-label">Kode</label>
-                    <input type="text" id="kode" name="kode" th:value="${kelas.kode}" th:class="${#fields.hasErrors('kode')}? 'form-control is-invalid': 'form-control'" placeholder="Kode" />
-                    <div th:if="${#fields.hasErrors('kode')}" class="invalid-feedback">
-                        <span th:errors="*{kode}"></span>
+                    <label for="code" class="form-label">Kode</label>
+                    <input type="text" id="code" name="code" th:value="${kelas.code}" th:class="${#fields.hasErrors('code')}? 'form-control is-invalid': 'form-control'" placeholder="Kode" />
+                    <div th:if="${#fields.hasErrors('code')}" class="invalid-feedback">
+                        <span th:errors="*{code}"></span>
                     </div>
                 </div>
                 <div class="col mb-3">
-                    <label for="nama" class="form-label">Nama</label>
-                    <input type="text" id="nama" name="nama" th:value="${kelas.nama}" th:class="${#fields.hasErrors('nama')}? 'form-control is-invalid': 'form-control'" placeholder="Nama Kelas" />
-                    <div th:if="${#fields.hasErrors('nama')}" class="invalid-feedback">
-                        <span th:errors="*{nama}"></span>
+                    <label for="name" class="form-label">Nama</label>
+                    <input type="text" id="name" name="name" th:value="${kelas.name}" th:class="${#fields.hasErrors('name')}? 'form-control is-invalid': 'form-control'" placeholder="Nama Kelas" />
+                    <div th:if="${#fields.hasErrors('name')}" class="invalid-feedback">
+                        <span th:errors="*{name}"></span>
                     </div>
                 </div>
             </div>
 
             <div class="row g-2">
                 <div class="col mb-3">
-                    <label for="ruangId" class="form-label">Ruangan</label>
-                    <select id="ruangId" name="ruangId" th:value="${kelas.ruangId}" data-allow-clear="true"
-                            th:class="${#fields.hasErrors('ruangId')}? 'form-select select2 is-invalid': 'form-select select2'">
+                    <label for="roomId" class="form-label">Ruangan</label>
+                    <select id="roomId" name="roomId" th:value="${kelas.roomId}" data-allow-clear="true"
+                            th:class="${#fields.hasErrors('roomId')}? 'form-select select2 is-invalid': 'form-select select2'">
                         <option value="">Pilih Ruangan</option>
-                        <option th:each="item : ${ruangan}" th:value="${item.id}" th:text="${item.kode}"
-                                th:selected="${item.id == kelas.ruangId}"></option>
+                        <option th:each="item : ${ruangan}" th:value="${item.id}" th:text="${item.code}"
+                                th:selected="${item.id == kelas.roomId}"></option>
                     </select>
-                    <div th:if="${#fields.hasErrors('ruangId')}" class="invalid-feedback">
-                        <span th:errors="*{ruangId}"></span>
+                    <div th:if="${#fields.hasErrors('roomId')}" class="invalid-feedback">
+                        <span th:errors="*{roomId}"></span>
                     </div>
                 </div>
                 <div class="col mb-3">
-                    <label for="lembagaId" class="form-label">Lembaga</label>
-                    <select id="lembagaId" name="lembagaId" th:value="${kelas.lembagaId}" data-allow-clear="true"
-                            th:class="${#fields.hasErrors('ruangId')}? 'form-select select2 is-invalid': 'form-select select2'">
+                    <label for="institutionId" class="form-label">Lembaga</label>
+                    <select id="institutionId" name="institutionId" th:value="${kelas.institutionId}" data-allow-clear="true"
+                            th:class="${#fields.hasErrors('roomId')}? 'form-select select2 is-invalid': 'form-select select2'">
                         <option value="">Pilih Lembaga</option>
                         <option th:each="item : ${lembaga}" th:value="${item.id}" th:text="${item.nama}"
-                                th:selected="${item.id == kelas.lembagaId}"></option>
+                                th:selected="${item.id == kelas.institutionId}"></option>
                     </select>
-                    <div th:if="${#fields.hasErrors('lembagaId')}" class="invalid-feedback">
-                        <span th:errors="*{lembagaId}"></span>
+                    <div th:if="${#fields.hasErrors('institutionId')}" class="invalid-feedback">
+                        <span th:errors="*{institutionId}"></span>
                     </div>
                 </div>
             </div>
 
             <div class="row g-2">
                 <div class="col mb-3">
-                    <label for="tahunAjaranId" class="form-label">Tahun Ajaran</label>
-                    <select id="tahunAjaranId" name="tahunAjaranId" th:value="${kelas.tahunAjaranId}" data-allow-clear="true"
-                            th:class="${#fields.hasErrors('tahunAjaranId')}? 'form-select select2 is-invalid': 'form-select select2'">
+                    <label for="academicYearId" class="form-label">Tahun Ajaran</label>
+                    <select id="academicYearId" name="academicYearId" th:value="${kelas.academicYearId}" data-allow-clear="true"
+                            th:class="${#fields.hasErrors('academicYearId')}? 'form-select select2 is-invalid': 'form-select select2'">
                         <option value="">Pilih Tahun Ajaran</option>
-                        <option th:each="item : ${tahunAjaran}" th:value="${item.id}" th:text="${item.nama}"
-                                th:selected="${item.id == kelas.tahunAjaranId}"></option>
+                        <option th:each="item : ${tahunAjaran}" th:value="${item.id}" th:text="${item.name}"
+                                th:selected="${item.id == kelas.academicYearId}"></option>
                     </select>
-                    <div th:if="${#fields.hasErrors('tahunAjaranId')}" class="invalid-feedback">
-                        <span th:errors="*{tahunAjaranId}"></span>
+                    <div th:if="${#fields.hasErrors('academicYearId')}" class="invalid-feedback">
+                        <span th:errors="*{academicYearId}"></span>
                     </div>
                 </div>
                 <div class="col mb-3">
@@ -74,7 +73,7 @@
                     <select id="levelId" name="levelId" th:value="${kelas.levelId}" data-allow-clear="true"
                             th:class="${#fields.hasErrors('levelId')}? 'form-select select2 is-invalid': 'form-select select2'">
                         <option value="">Pilih Level</option>
-                        <option th:each="item : ${level}" th:value="${item.id}" th:text="${item.nama}"
+                        <option th:each="item : ${level}" th:value="${item.id}" th:text="${item.name}"
                                 th:selected="${item.id == kelas.levelId}"></option>
                     </select>
                     <div th:if="${#fields.hasErrors('levelId')}" class="invalid-feedback">
@@ -85,27 +84,27 @@
 
             <div class="row g-2">
                 <div class="col mb-3">
-                    <label for="sesiAkademikId" class="form-label">Sesi / Semester</label>
-                    <select id="sesiAkademikId" name="sesiAkademikId" th:value="${kelas.sesiAkademikId}" data-allow-clear="true"
+                    <label for="academicSessionId" class="form-label">Sesi / Semester</label>
+                    <select id="academicSessionId" name="academicSessionId" th:value="${kelas.academicSessionId}" data-allow-clear="true"
                             th:class="${#fields.hasErrors('levelId')}? 'form-select select2 is-invalid': 'form-select select2'">
                         <option value="">Pilih Sesi / Semester</option>
                         <option th:each="item : ${sesi}" th:value="${item.id}" th:text="${item.semester}"
-                                th:selected="${item.id == kelas.sesiAkademikId}"></option>
+                                th:selected="${item.id == kelas.academicSessionId}"></option>
                     </select>
-                    <div th:if="${#fields.hasErrors('sesiAkademikId')}" class="invalid-feedback">
-                        <span th:errors="*{sesiAkademikId}"></span>
+                    <div th:if="${#fields.hasErrors('academicSessionId')}" class="invalid-feedback">
+                        <span th:errors="*{academicSessionId}"></span>
                     </div>
                 </div>
                 <div class="col mb-3">
-                    <label for="waliKelasId" class="form-label">Wali Kelas</label>
-                    <select id="waliKelasId" name="waliKelasId" th:value="${kelas.waliKelasId}" data-allow-clear="true"
+                    <label for="homeroomTeacherId" class="form-label">Wali Kelas</label>
+                    <select id="homeroomTeacherId" name="homeroomTeacherId" th:value="${kelas.homeroomTeacherId}" data-allow-clear="true"
                             th:class="${#fields.hasErrors('levelId')}? 'form-select select2 is-invalid': 'form-select select2'">
                         <option value="">Pilih Wali Kelas</option>
-                        <option th:each="item : ${person}" th:value="${item.id}" th:text="${item.nama}"
-                                th:selected="${item.id == kelas.waliKelasId}"></option>
+                        <option th:each="item : ${person}" th:value="${item.id}" th:text="${item.fullName}"
+                                th:selected="${item.id == kelas.homeroomTeacherId}"></option>
                     </select>
-                    <div th:if="${#fields.hasErrors('waliKelasId')}" class="invalid-feedback">
-                        <span th:errors="*{waliKelasId}"></span>
+                    <div th:if="${#fields.hasErrors('homeroomTeacherId')}" class="invalid-feedback">
+                        <span th:errors="*{homeroomTeacherId}"></span>
                     </div>
                 </div>
             </div>
@@ -119,5 +118,4 @@
                 Close
             </button>
         </div>
-    </div>
 </form>
