--- a/src/main/resources/templates/pages/master/person/add.html
+++ b/src/main/resources/templates/pages/master/person/add.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row mb-3">
                 <div class="col mb-0">
                     <label for="address" class="form-label">Alamat Tinggal</label>
                     <input type="text" id="address" name="address" th:value="${person.address}"
