feat : update institution page add

--- a/src/main/resources/templates/pages/master/institution/index.html
+++ b/src/main/resources/templates/pages/master/institution/index.html
@@ -45,7 +45,8 @@
                         <th>Effective Days</th>
                         <th>Started Day</th>
                         <th>End Day</th>
-                        <th>End of Early</th>
+                        <th>End Early</th>
+                        <th>End Of Day</th>
                         <th>Province</th>
                         <th>City</th>
                         <th>District</th>
